--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +24,27 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.questionsmodal {
+  position: absolute;
+  width: 700px;
+  background-color: white;
+  border: 2px solid #000;
+  box-shadow: 2px 2px 2px grey;
+  padding: 20px;
+  top: 50px;
+  left: 50%;
+  margin-left: -350px;
+  max-height: 500px;
+  overflow: auto;
+}
+
+.questionstable .row {
+  margin: 0;
+}
+
+.questionstable {
+  height: 100vh;
+  overflow: auto;
 }
