--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,6 @@
   text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .questionsmodal {
   position: absolute;
   width: 700px;
@@ -38,6 +14,20 @@
   margin-left: -350px;
   max-height: 500px;
   overflow: auto;
+  
+}
+
+@media only screen 
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+  .questionsmodal {
+    width: 100vw;
+    top: 0;
+    left: 0;
+    margin-left: 0;
+    max-height: 100vh;
+  }
+  
 }
 
 .questionstable .row {
@@ -45,6 +35,27 @@
 }
 
 .questionstable {
-  height: 100vh;
+  height: calc(100vh - 56px);
   overflow: auto;
+}
+
+.questiontablerow {
+  cursor: pointer;
+}
+
+.questionstable .fixedtableheader th {
+  position: sticky;
+  top: 0;
+}
+
+pre {
+  margin-bottom: 1em;
+  padding: 12px 8px;
+  width: auto;
+  max-height: 600px;
+  overflow: auto;
+  font-size: 13px;
+  background-color: #DDD;
+  border-radius: 3px;
+  color: #555;
 }
