--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,10 @@
   border: 2px solid #000;
   box-shadow: 2px 2px 2px grey;
   padding: 20px;
-  top: 50px;
   left: 50%;
   margin-left: -350px;
-  max-height: 500px;
+  max-height: 100vh;
   overflow: auto;
-  
 }
 
 @media only screen 
@@ -58,4 +56,14 @@ pre {
   background-color: #DDD;
   border-radius: 3px;
   color: #555;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* opacity: 0.6; */
 }
